Use wio in Dockerfile

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mikroapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/mikroapp",
   "dependencies": {
     "@material-ui/core": "^3.5.1",
     "@material-ui/icons": "^3.0.1",
